--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -1,10 +1,17 @@
 name: Build and Test with Maven
 
+concurrency:
+  group: character-generator-build-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-with-tests:
@@ -24,3 +31,42 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml -U
 
+  pipeline-base:
+    uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
+    needs: build-with-tests
+    environment: live
+    with:
+      build_image: character-generator-service
+      service_name: character-generator-service
+      pom_folder: character-generator-starter
+    secrets: inherit
+
+  pipeline-data:
+    uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
+    needs: build-with-tests
+    environment: live
+    with:
+      build_image: data-service
+      service_name: data-service
+      pom_folder: data-starter
+    secrets: inherit
+
+  pipeline-security:
+    uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
+    needs: build-with-tests
+    environment: live
+    with:
+      build_image: security-service
+      service_name: security-service
+      pom_folder: security-starter
+    secrets: inherit
+
+  pipeline-genefunk:
+    uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
+    needs: build-with-tests
+    environment: live
+    with:
+      build_image: genefunk-generator-service
+      service_name: genefunk-generator-service
+      pom_folder: genefunk-starter
+    secrets: inherit
