--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -6,6 +6,12 @@ concurrency:
 
 on:
   workflow_dispatch:
+    inputs:
+      deploy_to_live:
+        description: 'Live deployment?'
+        type: boolean
+        required: true
+        default: false
   push:
     branches:
       - main
@@ -30,6 +36,7 @@ jobs:
         run: mvn -B test --file pom.xml
 
   pipeline-base:
+    if: github.event_name == 'workflow_dispatch' && inputs.deploy_to_live == true
     uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
     needs: build-with-tests
     with:
@@ -39,6 +46,7 @@ jobs:
     secrets: inherit
 
   pipeline-data:
+    if: github.event_name == 'workflow_dispatch' && inputs.deploy_to_live == true
     uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
     needs: build-with-tests
     with:
@@ -48,6 +56,7 @@ jobs:
     secrets: inherit
 
   pipeline-security:
+    if: github.event_name == 'workflow_dispatch' && inputs.deploy_to_live == true
     uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
     needs: build-with-tests
     with:
@@ -57,6 +66,7 @@ jobs:
     secrets: inherit
 
   pipeline-genefunk:
+    if: github.event_name == 'workflow_dispatch' && inputs.deploy_to_live == true
     uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
     needs: build-with-tests
     with:
