--- a/genefunk-starter/Dockerfile
+++ b/genefunk-starter/Dockerfile
@@ -3,4 +3,5 @@ LABEL authors="hipp"
 
 COPY target/*-spring-boot.jar service.jar
 RUN chmod +x service.jar
+EXPOSE 8080:8080
 ENTRYPOINT ["java","-jar" ,"service.jar"]
