🐛 fixing save new User

--- a/base/src/main/resources/application-h2-database.properties
+++ b/base/src/main/resources/application-h2-database.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:h2:./database/${DATASOURCE_NAME};AUTO_SERVER=TRUE
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.data.jpa.repositories.enabled=true
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
