defining main class

--- a/security-starter/pom.xml
+++ b/security-starter/pom.xml
@@ -73,6 +73,7 @@
                                     <goal>build-image</goal>
                                 </goals>
                                 <configuration>
+                                    <mainClass>${start-class}</mainClass>
                                     <image>
                                         <builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
                                     </image>
