--- a/genefunk-starter/pom.xml
+++ b/genefunk-starter/pom.xml
@@ -72,6 +72,7 @@
 									<goal>build-image</goal>
 								</goals>
 								<configuration>
+									<mainClass>${start-class}</mainClass>
 									<image>
 										<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
 									</image>
