🔧 add image build config

--- a/character-generator-starter/pom.xml
+++ b/character-generator-starter/pom.xml
@@ -87,6 +87,12 @@
 									<mainClass>${start-class}</mainClass>
 									<image>
 										<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
+										<env>
+											<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+											<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
+											<BPL_SPRING_AOT_ENABLED>true</BPL_SPRING_AOT_ENABLED>
+											<BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
+										</env>
 									</image>
 								</configuration>
 							</execution>
