--- a/.github/workflows/character-starter.yml
+++ b/.github/workflows/character-starter.yml
@@ -16,6 +16,9 @@ jobs:
 
     runs-on: ubuntu-latest
     environment: live
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,11 +28,11 @@ jobs:
           workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
           service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
           access_token_lifetime: 3600s
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
+      - name: Set up GraalVM
+        uses: graalvm/setup-graalvm@v1
         with:
           java-version: '23'
-          distribution: 'temurin'
+          distribution: 'graalvm'
           cache: maven
       - name: Run Tests
         run: mvn -B test --file character-generator-starter/pom.xml
