--- a/.github/workflows/character-starter.yml
+++ b/.github/workflows/character-starter.yml
@@ -49,7 +49,19 @@ jobs:
       - name: Build Image
         run: |
           cd character-generator-starter
-          mvn spring-boot:build-image -DskipTests -Pnative -Dimage.build=true -Dimage.push=true -Dimage.name=europe-west3-docker.pkg.dev/${{ vars.PROJECT_ID }}/${{ vars.REPOSITORY_NAME }}/character-generator-service:latest
+          mvn spring-boot:build-image -DskipTests -Pnative \
+            -Dspring-boot.build-image.imageName=${{vars.REGISTRY_HOSTNAME}}/${{vars.PROJECT_ID}}/${{vars.REPOSITORY_NAME}}/character-generator-service:latest
+
+      - name: Authentifiziere bei Google Container Registry
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{vars.PROJECT_ID}}
+
+      - name: Konfiguriere Docker für Google Container Registry
+        run: gcloud auth configure-docker ${{vars.REGISTRY_HOSTNAME}} --quiet
+
+      - name: Push Image to Google Container Registry
+        run: docker push ${{vars.REGISTRY_HOSTNAME}}/${{vars.PROJECT_ID}}/${{vars.REPOSITORY_NAME}}/character-generator-service:latest
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v1
