🔧 split build and deploy

--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-deploy-service-to-cloud-run:
+  build-and-test:
     runs-on: ubuntu-latest
     environment: live
     permissions:
@@ -48,25 +48,28 @@ jobs:
           mvn spring-boot:build-image -DskipTests -Pnative \
             -Dspring-boot.build-image.imageName=${{vars.REGISTRY_HOSTNAME}}/${{vars.PROJECT_ID}}/${{vars.REPOSITORY_NAME}}/${{ inputs.image-name }}:latest
 
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
+          service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
+          access_token_lifetime: 3600s
+          create_credentials_file: 'false'
+
+      - name: Konfiguriere Docker für Google Container Registry
+        run: gcloud auth configure-docker ${{vars.REGISTRY_HOSTNAME}} --quiet
+
+      - name: Push Image to Google Container Registry
+        run: docker push ${{vars.REGISTRY_HOSTNAME}}/${{vars.PROJECT_ID}}/${{vars.REPOSITORY_NAME}}/${{ inputs.image-name }}:latest
+
   deploy-service-to-cloud-run:
         runs-on: ubuntu-latest
         environment: live
+        needs: build-and-test
         permissions:
             contents: read
             id-token: write
         steps:
-          - name: Authenticate to Google Cloud
-            uses: google-github-actions/auth@v1
-            with:
-              workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
-              service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
-              access_token_lifetime: 3600s
-
-          - name: Konfiguriere Docker für Google Container Registry
-            run: gcloud auth configure-docker ${{vars.REGISTRY_HOSTNAME}} --quiet
-
-          - name: Push Image to Google Container Registry
-            run: docker push ${{vars.REGISTRY_HOSTNAME}}/${{vars.PROJECT_ID}}/${{vars.REPOSITORY_NAME}}/${{ inputs.image-name }}:latest
 
           - name: Deploy to Cloud Run
             uses: google-github-actions/deploy-cloudrun@v1
