--- a/character-generator-starter/pom.xml
+++ b/character-generator-starter/pom.xml
@@ -53,9 +53,7 @@
 							<goal>repackage</goal>
 						</goals>
 						<configuration>
-							<mainClass>
-								${start-class}
-							</mainClass>
+							<mainClass>${start-class}</mainClass>
 						</configuration>
 					</execution>
 					<execution>
@@ -63,6 +61,9 @@
 						<goals>
 							<goal>process-aot</goal>
 						</goals>
+						<configuration>
+							<mainClass>${start-class}</mainClass>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
