--- a/character-generator-starter/pom.xml
+++ b/character-generator-starter/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>character-generator-starter</artifactId>
 
 	<properties>
-		<start-class>de.hipp.pnp.CharacterGeneratorApplication</start-class>
+		<start-class>de.hipp.pnp.CharacterGeneratorApplication$Companion</start-class>
 	</properties>
 
 	<dependencies>
@@ -46,24 +46,21 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>${start-class}</mainClass>
+				</configuration>
 				<executions>
 					<execution>
 						<id>repackage</id>
 						<goals>
 							<goal>repackage</goal>
 						</goals>
-						<configuration>
-							<mainClass>${start-class}</mainClass>
-						</configuration>
 					</execution>
 					<execution>
 						<id>process-aot</id>
 						<goals>
 							<goal>process-aot</goal>
 						</goals>
-						<configuration>
-							<mainClass>${start-class}</mainClass>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -78,22 +75,22 @@
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<mainClass>${start-class}</mainClass>
+							<image>
+								<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
+								<env>
+									<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+									<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
+								</env>
+							</image>
+						</configuration>
 						<executions>
 							<execution>
 								<id>build-image</id>
 								<goals>
 									<goal>build-image</goal>
 								</goals>
-								<configuration>
-									<mainClass>${start-class}</mainClass>
-									<image>
-										<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
-										<env>
-											<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-											<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
-										</env>
-									</image>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
