--- a/monolith/pom.xml
+++ b/monolith/pom.xml
@@ -61,7 +61,7 @@
 					<image>
 						<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
 						<env>
-							<BP_JVM_VERSION>23</BP_JVM_VERSION>
+							<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
 						</env>
 					</image>
 					<excludes>
@@ -139,7 +139,7 @@
 								<builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
 								<env>
 									<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-									<BP_JVM_VERSION>23</BP_JVM_VERSION>
+									<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
 								</env>
 							</image>
 						</configuration>
