--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,10 @@
 	</modules>
 
 	<properties>
-		<java.version>23</java.version>
+		<java.version>24</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<kotlin.code.style>official</kotlin.code.style>
-		<kotlin.compiler.jvmTarget>23</kotlin.compiler.jvmTarget>
+		<kotlin.compiler.jvmTarget>${java.version}</kotlin.compiler.jvmTarget>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
